tests/combined/invalid/duplicate_parameter_names.simple
# Test 16: Duplicate parameter names
begin
  function int test(int x, bool x) begin  # Error
    return 1;
  end
end